# genome

./: Annotation.cpp  CMakeLists.txt  README.md  visualjava
include/: bam_read.h  bam_read_storage.h  index.h  pileup_w.h  reference_handler.h
src/: CMakeLists.txt  bam_read_storage.cpp  first.cpp  pileup_w.cpp  reference_handler.cpp
src/anno/: Annotation.cpp
src/pileup/: bam_read.cpp  bam_read_storage.cpp  first.cpp  index.cpp  pileup_w.cpp  reference_handler.cpp
src/quality_marker/: quality_marker.c
src/strange/: Annotation.cpp  specnum.c  startcodo.c
src/visual_part/: csv.cpp  csv.h  daemon.cpp  daemon.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mut_graphicsitem.cpp  mut_graphicsitem.h  mut_item.cpp  mut_item.h  prot_item.cpp  prot_item.h  res.qrc  vis.pro
